--- a/portafolio/portafolio.css
+++ b/portafolio/portafolio.css
@@ -1,10 +1,10 @@
 html{
-    background-color: rgb(203, 211, 218);
+    background-color: rgba(100, 98, 87, 0.69);
 
 }
 .sredes{
     position: sticky;
-    background-color: rgb(131, 111, 86);
+    background-color: rgb(204, 204, 204);
     height: 70px;
     top: 0%;
     z-index: 20;
@@ -12,24 +12,21 @@ html{
 }
 .redes{
     display: flex;
-    background-color: burlywood;
     height: 50px;
     left:90%;  
 }
 
 .presentacion{
-    background-color: rgb(232, 225, 186);
     display: flex;
     justify-content:center;
     align-items:center;
     height: 420px;
-    margin: 150px 0 200px 0;
-    border: solid 6px rgb(0, 0, 0);
+
 }
 .decorar_imagen{
     display: flex;
     justify-content: space-evenly;
-    background-color:rgb(164, 148, 112) ;
+    background-color:rgb(216, 216, 216) ;
     align-items: center;
     height: 390px;
     width: 390px;
@@ -38,7 +35,7 @@ html{
 .presentacion img{
     border-radius: 6px;
     height: 300px;
-    border: solid 2px rgb(0, 0, 0);
+    border: solid 3px rgb(0, 0, 0);
     font-size: 10px;
     
     
@@ -72,16 +69,20 @@ html{
 
 .proyectos{
     display: flex;
-    background-color: rgb(85, 91, 91);
-    height: 140px;
+    background-color: rgb(204, 204, 204);
+    height: 540px;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    border: 3px solid rgb(28, 28, 28);
+    box-shadow: 0 0 30px rgb(86, 86, 86); ;
 }
+
 .proyectos samp{
     background-color: aliceblue;
-    width: 120px;
-    height: 120px;
+    width: 220px;
+    height: 220px;
+    border: 3px solid rgb(0, 0, 0);
 
 }
 .contra_pie{
